--- a/workflows/auto-merge.yaml
+++ b/workflows/auto-merge.yaml
@@ -1,10 +1,14 @@
 name: 'Set auto merge'
 'on':
-  pull_request_review:
-    types: [submitted]
+  workflow_call:
+    secrets:
+    access-token:
+      required: true
 
 set-auto-merge:
   if: ${{ github.event.review.state == 'APPROVED' && github.event.review.pull_request.user.login == 'dependabot[bot]' }}
+  env:
+    GITHUB_TOKEN: ${{ secrets.access-token }}
   runs-on: ubuntu-latest
   steps:
     - run: gh pr merge ${{ github.event.review.pull_request.issue_url }} --auto
