--- a/workflows/auto-merge.yaml
+++ b/workflows/auto-merge.yaml
@@ -5,10 +5,13 @@ name: 'Set auto merge'
     access-token:
       required: true
 
-set-auto-merge:
-  if: ${{ github.event.review.state == 'APPROVED' && github.event.review.pull_request.user.login == 'dependabot[bot]' }}
-  env:
-    GITHUB_TOKEN: ${{ secrets.access-token }}
-  runs-on: ubuntu-latest
-  steps:
-    - run: gh pr merge ${{ github.event.review.pull_request.issue_url }} --auto
+jobs:
+  set-auto-merge:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.review.state == 'APPROVED' && github.event.review.pull_request.user.login == 'dependabot[bot]' }}
+    steps:
+      env:
+        GITHUB_TOKEN: ${{ secrets.access-token }}
+      runs-on: ubuntu-latest
+      steps:
+        - run: gh pr merge ${{ github.event.review.pull_request.issue_url }} --auto
