--- a/workflows/auto-merge.yaml
+++ b/workflows/auto-merge.yaml
@@ -2,13 +2,13 @@ name: 'Set auto merge'
 'on':
   workflow_call:
     secrets:
-    access-token:
-      required: true
+      token:
+        required: true
 
 jobs:
   set-auto-merge:
-    runs-on: ubuntu-latest
     if: ${{ github.event.review.state == 'APPROVED' && github.event.review.pull_request.user.login == 'dependabot[bot]' }}
+    runs-on: ubuntu-latest
     steps:
       env:
         GITHUB_TOKEN: ${{ secrets.access-token }}
